--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -32,7 +32,7 @@
     <body class="page--<%= controller.controller_name %>">
         <main class="layout-container">
             <header>
-                <div class="section-wrapper">
+                <div class="section-wrapper section-wrapper__header">
                     <h1>
                         <a href="#">forwind</a>
                     </h1>
