--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<section class="content-block context-block__banner">
+<h1 class="visually-hidden">Forwind &mdash; home</h1>
+
+<section class="content-block content-block__banner">
 	<h2 class="heading heading--floating-button">
 		<a href="#">Release</a>
 	</h2>
@@ -18,7 +20,7 @@
 	</h2>
 	<div class="column-container column-container__2-cols">
 		<div class="column-block">
-			<h3 class="heading">Analogue chat interview</h3>
+			<h3 class="heading heading--article-title">Analogue chat interview</h3>
 			<p>
 				Richard from Analogue Chat and It&#39;s not music baby interviews Hannes and Conor about past, present and future for the <a href="#">Forwind</a>
 			</p>
@@ -46,8 +48,8 @@
 			</a> 
 			<figcaption class="figcaption">
 				<a href="#">
-					<span class="figcaption__label">Jeremy Keenan</span>
-					<span class="figcaption__label">Scripts</span>
+					<span class="text-title">Jeremy Keenan</span>
+					<span class="text-title">Scripts</span>
 				</a>
 			</figcaption>  
 		</figure>
@@ -57,8 +59,8 @@
 			</a> 
 			<figcaption class="figcaption">
 				<a href="#">
-					<span class="figcaption__label">Jeremy Keenan</span>
-					<span class="figcaption__label">Scripts</span>
+					<span class="text-title">Jeremy Keenan</span>
+					<span class="text-title">Scripts</span>
 				</a>
 			</figcaption>  
 		</figure>
@@ -68,8 +70,8 @@
 			</a> 
 			<figcaption class="figcaption">
 				<a href="#">
-					<span class="figcaption__label">Jeremy Keenan</span>
-					<span class="figcaption__label">Scripts</span>
+					<span class="text-title">Jeremy Keenan</span>
+					<span class="text-title">Scripts</span>
 				</a>
 			</figcaption>  
 		</figure>
@@ -90,8 +92,8 @@
 			</a> 
 			<figcaption class="figcaption">
 				<a href="#">
-					<span class="figcaption__label">Jeremy Keenan</span>
-					<span class="figcaption__label">Scripts</span>
+					<span class="text-title">Jeremy Keenan</span>
+					<span class="text-title">Scripts</span>
 				</a>
 			</figcaption>  
 		</figure>
@@ -101,8 +103,8 @@
 			</a> 
 			<figcaption class="figcaption">
 				<a href="#">
-					<span class="figcaption__label">Jeremy Keenan</span>
-					<span class="figcaption__label">Scripts</span>
+					<span class="text-title">Jeremy Keenan</span>
+					<span class="text-title">Scripts</span>
 				</a>
 			</figcaption>  
 		</figure>
