--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<head>
-  <title>forwind | <%= @context.downcase%></title>
-  	<meta name="google-site-verification" content="Oq2AaagB6c_NXK25RChwoHq0tn7yRod2WRabKCgsYD8" />
-    <meta name="description" content="An independent music publishing label born in 2009. " />
-    <meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
-    <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "url": "http://www.forwind.net",
-      "name": "Forwind Publishing",
-      "description" : "An independent publishing label established in 2009",
-      "contactPoint": [{
-        "@type": "ContactPoint",
-        "email" : "webquery@forwind.net"
-      }],
-      "department": [{
+    <head>
+    <title>forwind | <%= @context.downcase%></title>
+        <meta name="google-site-verification" content="Oq2AaagB6c_NXK25RChwoHq0tn7yRod2WRabKCgsYD8" />
+        <meta name="description" content="An independent music publishing label born in 2009. " />
+        <meta name="keywords" content="Forwind, Jeff Carey, Clang Sayne, James O'Sullivan, CjC, Atom eye, Sonnamble, Fourth Page, Tomonari Nozaki, independent record label, London, electronic music"  />
+        <script type="application/ld+json">
+        {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "url": "http://www.forwind.net/releases",
-        "name": "Forwind Releases",
-        "description" : "Browse our full catalogue of releases"
-      }]
-    }
-    </script>
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rosarivo" rel="stylesheet" />
-    <%= stylesheet_link_tag('base') %>
-    <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
-</head>
+        "url": "http://www.forwind.net",
+        "name": "Forwind Publishing",
+        "description" : "An independent publishing label established in 2009",
+        "contactPoint": [{
+            "@type": "ContactPoint",
+            "email" : "webquery@forwind.net"
+        }],
+        "department": [{
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "http://www.forwind.net/releases",
+            "name": "Forwind Releases",
+            "description" : "Browse our full catalogue of releases"
+        }]
+        }
+        </script>
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rosarivo" rel="stylesheet" />
+        <%= stylesheet_link_tag('base') %>
+        <link rel="icon" href="/images/index/favicon.ico" type="image/x-icon" />
+    </head>
     <body class="page--<%= controller.controller_name %>">
         <main class="layout-container">
             <header>
                 <div class="section-wrapper section-wrapper__header">
-                    <h1>
-                        <a href="#">forwind</a>
-                    </h1>
+                    <span class="logo">
+                        <a href="/">forwind</a>
+                    </span>
                     <%= render(:partial => "shared/navigation") %>
                 </div>
             </header>
