--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -1,17 +1,113 @@
-<div id="content_container">
-<% @releases.each do |release| %>
-<div class="release_index_promo">
-<a href=<%="/releases/"+release.cat.downcase %>>
-<img src= <%= File.join(@s3_images, "releases", release.cat.downcase + "_sm.jpg") %>></img></a>
-<h2><a href=<%="/releases/"+release.cat.downcase %>> <%= release.title.html_safe%></a></h2>
-<p><%= release.short_desc.html_safe %></p>
-</div>
-<% end %>
-</div>
+<article class="column-container column-container__article">
+    <section class="column-block column-block__main-content">
+        <div class="content-block content-block__banner">
+            <figure>
+                <a href="#">
+                    <img src="https://placeimg.com/400/400/nature/grayscale" alt="Alt desc" />
+                </a>    
+            </figure>
+        </div>    
+    
+        <div class="content-block">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum velit euismod in pellentesque massa placerat. Ut morbi tincidunt augue interdum velit euismod in pellentesque massa. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Et tortor at risus viverra adipiscing at in tellus. Cras semper auctor neque vitae. Placerat in egestas erat imperdiet sed euismod nisi porta lorem. Mi eget mauris pharetra et ultrices. Pulvinar elementum integer enim neque volutpat ac tincidunt vitae.</p>
 
+            <p>Vestibulum lorem sed risus ultricies tristique. Varius vel pharetra vel turpis nunc eget. Netus et malesuada fames ac turpis. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Ornare arcu odio ut sem nulla pharetra diam sit amet. Nisi est sit amet facilisis magna etiam tempor. Feugiat in ante metus dictum at tempor commodo ullamcorper a. Elementum sagittis vitae et leo. Quam viverra orci sagittis eu volutpat. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Ac odio tempor orci dapibus ultrices in iaculis nunc sed. Est pellentesque elit ullamcorper dignissim cras tincidunt. Egestas integer eget aliquet nibh praesent tristique.</p>
+            
+            <p>Suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Enim ut sem viverra aliquet. Accumsan tortor posuere ac ut consequat semper viverra nam. Ultricies leo integer malesuada nunc vel. Eu mi bibendum neque egestas. Et odio pellentesque diam volutpat commodo sed egestas. Sem nulla pharetra diam sit amet nisl suscipit. Enim nec dui nunc mattis enim ut tellus elementum. Vitae et leo duis ut diam quam. Leo in vitae turpis massa sed elementum. Massa massa ultricies mi quis hendrerit dolor magna. Neque convallis a cras semper auctor neque vitae.</p>
+        </div>    
+    </section>
 
+    <aside class="column-block column-block__aside">
+        <!-- 
+            We duplicate this banner to show/hide it for mobile view
+            so we can keep the flex-box layout and avoid messy abstraction    
+        -->
+        <div class="content-block content-block__banner">
+            <figure>
+                <a href="#">
+                    <img src="https://placeimg.com/400/400/nature/grayscale" alt="Alt desc" />
+                </a>    
+            </figure>
+        </div>    
 
+        <div class="content-block">
+            <h1>
+                <span class="text-title">Jeremy Keenan</span>
+                <span class="text-title">Scripts</span>
+            </h1>    
+        </div>
 
+        <div class="content-block aside__widget">
+            <table class="table--release-details">
+                <caption>
+                    <span class="text-title">FWD18</span>
+                    <span class="text-title">Tape/digital</span> 
+                </caption>
+                <thead class="visually-hidden">
+                    <th>Track number</th>
+                    <th>Track name</th>
+                    <th>Track length (mm:ss)</th>
+                </thead>
+                <tbody>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-cell table-cell--track-number">01</td>
+                        <td class="table-cell table-cell--track-name">Track name</td>
+                        <td class="table-cell table-cell--track-length">07:45</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
+        <div class="content-block aside__widget">
+            <p>Music player</p>
+        </div>  
 
+        <div class="content-block aside__widget">
+            <a href="#" class="link--button">
+                Purchase from a reputable dealer
+            </a>
+        </div>  
 
+        <div class="content-block aside__widget">
+            <h2 class="heading heading--widget"><time>2017/06/01</time></h2>
+            <span class="text-title">Produced by <a href="#">Someone over there</a></span>
+            <span class="text-title">Mastered by Skeletor</span>
+            <span class="text-title">Artwork by He-man</span>  
+        </div>
+
+        <div class="content-block aside__widget">
+            <blockquote>
+                &ldquo;...it can be hard for a release such as this one to stand out. And yet, Wisconsin Mining State somehow does.&rdquo;
+                <cite>&mdash; Some guy</cite>
+            </blockquote>
+            <h2 class="heading heading--widget">Online reviews from </h2>
+            <span class="text-title"><a href="#">Big Banana 1</a> and <a href="#">Big Banana 2</a></span>
+        </div> 
+
+    </aside>
+</article>
