--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,13 +7,13 @@
             <span class="hamburger-line"></span>
         </span>
         <ul class="nav__menu">
-            <li>
+            <li class="nav__menu-item <%= is_active?('/releases') %>">
                 <%= link_to_if( not_in_context("releases", nil, "index"), "Releases", { :controller => "releases" }) %>
             </li>
-            <li>
+            <li class="nav__menu-item <%= is_active?('/artists') %>">
                 <%= link_to_if( not_in_context("artists", nil, "index"), "Artists   ", { :controller => "artists" }) %>
             </li>
-            <li>
+            <li class="nav__menu-item <%= is_active?('/lable') %>">
                 <a href="#">Label</a>
             </li>
         </ul>
