--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,26 +1,14 @@
-<div id="content_container">
-
-<div id="container_2grid_left">
-<p class="about">
-Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.
-<br/><br/>
-We're not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.
-<br/><br/>
-Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.
-<br/><br/>
-</p>
-
-</div>
-
-<div id="container_1grid_right">
-<dl>
-    <dt class="about_email">EMAIL :</dt>
-    <dd><a href="#" class="email">WEBQUERY (at) FORWIND DOT NET</a></dd>
-</dl>
-</div>
-
-
-
-
-</div>
-
+<article class="column-container column-container__article">
+    <section class="column-block column-block__main-content">
+        <div class="content-block content-block--title-heading">
+            <h1 class="heading heading--page-title">About</h1>
+        </div>
+        <div class="content-block content-block--article">
+            <img class="img img--right" src="https://placeimg.com/300/200/nature/grayscale" alt="Alt desc" />
+            <p>Forwind (pronounced forwYnd) is a multi-genre label currently operating from Berlin, Manchester and London.</p>
+            <p>We&#39;rre not worried about fitting neatly into one section in the record shop. Our passion is for adventurous music with a serious attention to detail, from the performance to the production.</p>
+            <p>Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.</p>
+            <p>EMAIL: <strong>WEBQUERY (at) FORWIND DOT NET</strong></p>
+        </div>    
+    </section>
+</article>
