--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,13 +20,17 @@
 	</h2>
 	<div class="column-container column-container__2-cols">
 		<div class="column-block">
-			<h3 class="heading heading--article-title">Analogue chat interview</h3>
+			<h3 class="heading heading--article-title">
+				<a href="#">Analogue chat interview</a>
+			</h3>
 			<p>
 				Richard from Analogue Chat and It&#39;s not music baby interviews Hannes and Conor about past, present and future for the <a href="#">Forwind</a>
 			</p>
 		</div>
 		<div class="column-block">
-			<h3 class="heading">Analogue chat interview</h3>
+			<h3 class="heading heading--article-title">
+				<a href="#">Analogue chat interview</a>
+			</h3>
 			<p>
 				Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.    
 			</p>
@@ -42,7 +46,7 @@
 		</a>
 	</h2>
 	<div class="column-container column-container__3-cols">
-		<figure class="column-block">
+		<figure class="column-block column-block__figure">
 			<a href="#">
 				<img src="https://placeimg.com/300/300/nature/grayscale" alt="Alt desc" />
 			</a> 
@@ -53,7 +57,7 @@
 				</a>
 			</figcaption>  
 		</figure>
-		<figure class="column-block">
+		<figure class="column-block column-block__figure">
 			<a href="#">
 				<img src="https://placeimg.com/300/300/nature/grayscale" alt="Alt desc" />
 			</a> 
@@ -64,7 +68,7 @@
 				</a>
 			</figcaption>  
 		</figure>
-		<figure class="column-block">
+		<figure class="column-block column-block__figure">
 			<a href="#">
 				<img src="https://placeimg.com/300/300/nature/grayscale" alt="Alt desc" />
 			</a> 
@@ -86,7 +90,7 @@
 		</a>
 	</h2>
 	<div class="column-container column-container__2-cols"> 
-		<figure class="column-block">
+		<figure class="column-block column-block__figure">
 			<a href="#">
 				<img src="https://placeimg.com/300/175/nature/grayscale" alt="Alt desc" />
 			</a> 
@@ -97,7 +101,7 @@
 				</a>
 			</figcaption>  
 		</figure>
-		<figure class="column-block">
+		<figure class="column-block column-block__figure">
 			<a href="#">
 				<img src="https://placeimg.com/300/175/nature/grayscale" alt="Alt desc" />
 			</a> 
@@ -118,11 +122,14 @@
 			<strong>Listen to more podcasts</strong>
 		</a>
 	</h2>
+	<div class="column-block">
+		Player here
+	</div>
 </section>
 
 <section class="content-block">
 	<h2 class="heading heading--content-block">
-		<a href="#">
+		<a href="/about">
 			About
 			<strong>Read on and contact details</strong>
 		</a>
