--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -8,11 +8,9 @@
             </figure>
         </div>    
     
-        <div class="content-block">
+        <div class="content-block content-block--article">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum velit euismod in pellentesque massa placerat. Ut morbi tincidunt augue interdum velit euismod in pellentesque massa. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Et tortor at risus viverra adipiscing at in tellus. Cras semper auctor neque vitae. Placerat in egestas erat imperdiet sed euismod nisi porta lorem. Mi eget mauris pharetra et ultrices. Pulvinar elementum integer enim neque volutpat ac tincidunt vitae.</p>
-
             <p>Vestibulum lorem sed risus ultricies tristique. Varius vel pharetra vel turpis nunc eget. Netus et malesuada fames ac turpis. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Ornare arcu odio ut sem nulla pharetra diam sit amet. Nisi est sit amet facilisis magna etiam tempor. Feugiat in ante metus dictum at tempor commodo ullamcorper a. Elementum sagittis vitae et leo. Quam viverra orci sagittis eu volutpat. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Ac odio tempor orci dapibus ultrices in iaculis nunc sed. Est pellentesque elit ullamcorper dignissim cras tincidunt. Egestas integer eget aliquet nibh praesent tristique.</p>
-            
             <p>Suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Enim ut sem viverra aliquet. Accumsan tortor posuere ac ut consequat semper viverra nam. Ultricies leo integer malesuada nunc vel. Eu mi bibendum neque egestas. Et odio pellentesque diam volutpat commodo sed egestas. Sem nulla pharetra diam sit amet nisl suscipit. Enim nec dui nunc mattis enim ut tellus elementum. Vitae et leo duis ut diam quam. Leo in vitae turpis massa sed elementum. Massa massa ultricies mi quis hendrerit dolor magna. Neque convallis a cras semper auctor neque vitae.</p>
         </div>    
     </section>
@@ -30,7 +28,7 @@
             </figure>
         </div>    
 
-        <div class="content-block">
+        <div class="content-block content-block--title-heading">
             <h1>
                 <span class="text-title">Jeremy Keenan</span>
                 <span class="text-title">Scripts</span>
