--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,17 +23,24 @@
 			<h3 class="heading heading--article-title">
 				<a href="#">Analogue chat interview</a>
 			</h3>
-			<p>
-				Richard from Analogue Chat and It&#39;s not music baby interviews Hannes and Conor about past, present and future for the <a href="#">Forwind</a>
-			</p>
+			<div class="content-block--article">
+				<p>
+					Richard from Analogue Chat and It&#39;s not music baby interviews Hannes and Conor about past, present and future for the <a href="#">Forwind</a>
+				</p>
+			</div>
 		</div>
 		<div class="column-block">
 			<h3 class="heading heading--article-title">
 				<a href="#">Analogue chat interview</a>
 			</h3>
-			<p>
-				Our aim is to provide a platform for music that maximises the expressive potential of sound, instruments and voices either through physical or electronic means, whether composed, constructed or improvised.    
-			</p>
+			<div class="content-block--article">
+				<p>
+					Our aim is to provide a platform for music that maximises expressive potential.
+				</p>
+				<p>
+					 <a href="#">More</a>
+				</p>
+			</div>
 		</div>
 	</div>
 </section>
@@ -151,7 +158,7 @@
 	</div>
 </section>
 <section class="content-block content-block__logos">
-	<a href="#"><img class="img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
-	<a href="#"><img class="img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
-	<a href="#"> <img class="img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
+	<a href="#"><img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
+	<a href="#"><img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
+	<a href="#"> <img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
 </section>
