--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -36,7 +36,7 @@
         </div>
 
         <div class="content-block aside__widget">
-            <table class="table--release-details">
+            <table class="table table--release-details">
                 <caption>
                     <span class="text-title">FWD18</span>
                     <span class="text-title">Tape/digital</span> 
