--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -149,18 +149,18 @@ blockquote {
             top: $spacing-factor;
         }
     }
-    &--content-block a {
+    &--content-block {
         font-family: $font-family-secondary;
         font-size: $font-size-md;
-        strong {
+        a strong {
             color: $font-color-secondary;
             font-size: $font-size-sm;
             text-transform: none;
             display: inline-block;
             text-indent: $spacing-factor * 0.67;
-        }
         &:hover {
             opacity: 0.8;
+        }
         }
     }
     a {
