changed displayed title of banner

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 
 <section class="content-block content-block__banner">
 	<h2 class="heading heading--floating-button">
-		<a href="#">Release</a>
+		<a href="#">Recent</a>
 	</h2>
 	<figure>
 		<a href="#">
