--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -130,7 +130,14 @@
 		</a>
 	</h2>
 	<div class="column-block">
-		Player here
+		<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FForwind%2Fthe-understate%2F" frameborder="0" ></iframe>
+		<figcaption class="figcaption">
+			<a href="#">
+				<span class="text-title">The Given</span>
+				<span class="text-title">Compiled & mixed by Traces</span>
+				<span class="text-title">Genre: Noise, industrial, experimental</span>
+			</a>
+		</figcaption>  
 	</div>
 </section>
 
