--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -34,7 +34,7 @@
             <header>
                 <div class="section-wrapper section-wrapper__header">
                     <span class="logo">
-                        <a href="/">forwind</a>
+                        <a href="/"><img src="assets/forwind_logo_white.svg" alt="Forwind" /></a>
                     </span>
                     <%= render(:partial => "shared/navigation") %>
                 </div>
