--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -133,7 +133,7 @@
 		<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FForwind%2Fthe-understate%2F" frameborder="0" ></iframe>
 		<figcaption class="figcaption">
 			<a href="#">
-				<span class="text-title">The Given</span>
+				<span class="text-title">The Understate</span>
 				<span class="text-title">Compiled & mixed by Traces</span>
 				<span class="text-title">Genre: Noise, industrial, experimental</span>
 			</a>
@@ -165,7 +165,6 @@
 	</div>
 </section>
 <section class="content-block content-block__logos">
-	<a href="#"><img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
-	<a href="#"><img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
-	<a href="#"> <img class="img img__logo" src="https://placeimg.com/175/110/nature/grayscale" alt="Alt desc" /></a>
+	<a href="https://www.imro.ie/"><img class="img img__logo" src="assets/imro_logo.png" alt="IMRO" /></a>
+	<a href="http://state51.com/"><img class="img img__logo" src="assets/state51_logo.png" alt="State 51" /></a>
 </section>
