--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -54,7 +54,7 @@
                         </ul>    
                     </nav>
                     <div class="copyright-notice column-block">
-                        forwind.net &#169; <%= Time.current.year %>
+                        &#169; Forwind <%= Time.current.year %>
                     </div>
                 </div>
             </footer>
